kuber/backend-report.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-report
  labels:
    app: backend-report
spec:
  replicas: 2
  # Стратегия развёртывания. Recreate — удалит сначала все старые поды 
  # Есть и более гибкая стратегии, например, RollingUpdate, которая будет обновлять поды порциями  
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: backend-report
  template:
    metadata:
      labels:
        app: backend-report
    spec:
      containers:
        - name: backend-report
          image: gitlab.praktikum-services.ru:5050/aspedan/sausage-store/sausage-store-report:latest
          imagePullPolicy: Always
          ports:
            - name: backend-report
              containerPort: 8081
      imagePullSecrets:
        - name: regcred
