kuber/backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 3
  # Стратегия развёртывания. Recreate — удалит сначала все старые поды
  # Есть и более гибкая стратегии, например, RollingUpdate, которая будет обновлять поды порциями
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: gitlab.praktikum-services.ru:5050/aspedan/sausage-store/sausage-store:latest
          imagePullPolicy: Always
          ports:
            - name: backend
              containerPort: 8080
      imagePullSecrets:
        - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
